[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Fonts/Normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Calculators/Damage/Fisico.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Calculators/Damage/Distancia.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Calculators/Damage/Especial.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Calculators/Status.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Calculators/Hurts.gd" type="Script" id=6]
[ext_resource path="res://Darktheme.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Icons/ReturnIcon.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Calculators/Calculator.gd" type="Script" id=9]

[sub_resource type="InputEventAction" id=1]
action = "ui_esc"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Calculator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 41.0
margin_right = -10.0
margin_bottom = -10.0
tab_close_display_policy = 1

[node name="TabContainer" type="TabContainer" parent="TabContainer/Damage"]
anchor_top = -0.014
anchor_right = 1.0
anchor_bottom = 1.007
margin_left = -3.0
margin_top = -0.174
margin_right = 5.0
margin_bottom = 1.08704
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fisico" type="Tabs" parent="TabContainer/Damage/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 41.0
margin_right = -10.0
margin_bottom = -10.0
drag_to_rearrange_enabled = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Damage/TabContainer/Fisico"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.0
margin_top = -242.0
margin_right = 157.0
margin_bottom = 242.0
rect_min_size = Vector2( 314, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_right = 314.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e o dano base da arma?"
align = 1

[node name="LineEdit" type="LineEdit" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 34.0
margin_right = 314.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1

[node name="Label2" type="Label" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 74.0
margin_right = 314.0
margin_bottom = 104.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e a força de quem esta atacando?"
align = 1

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 108.0
margin_right = 314.0
margin_bottom = 144.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1

[node name="Label3" type="Label" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 148.0
margin_right = 314.0
margin_bottom = 178.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e o numero tirado no dado?"
align = 1

[node name="LineEdit3" type="LineEdit" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 182.0
margin_right = 314.0
margin_bottom = 218.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1
max_length = 2

[node name="CheckButton" type="CheckButton" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 222.0
margin_right = 314.0
margin_bottom = 264.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Possui bonus?"

[node name="LineEdit4" type="LineEdit" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 268.0
margin_right = 314.0
margin_bottom = 304.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1
editable = false

[node name="CheckButton2" type="CheckButton" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 308.0
margin_right = 314.0
margin_bottom = 350.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Possui onus?"

[node name="LineEdit5" type="LineEdit" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 354.0
margin_right = 314.0
margin_bottom = 390.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 394.0
margin_right = 314.0
margin_bottom = 424.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "O dano e:"
align = 1

[node name="Label5" type="Label" parent="TabContainer/Damage/TabContainer/Fisico/VBoxContainer"]
margin_top = 428.0
margin_right = 314.0
margin_bottom = 458.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1

[node name="Distancia" type="Tabs" parent="TabContainer/Damage/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 41.0
margin_right = -10.0
margin_bottom = -10.0
drag_to_rearrange_enabled = true
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Damage/TabContainer/Distancia"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -265.181
margin_right = 150.0
margin_bottom = 274.819
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e o dano da arma?"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 72.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1

[node name="Label6" type="Label" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 106.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e o dano base do projetil?"
align = 1
valign = 1

[node name="LineEdit6" type="LineEdit" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 110.0
margin_right = 300.0
margin_bottom = 148.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 152.0
margin_right = 300.0
margin_bottom = 182.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e a força de quem esta atacando?"
align = 1
valign = 1

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 186.0
margin_right = 300.0
margin_bottom = 224.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1

[node name="Label3" type="Label" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 228.0
margin_right = 300.0
margin_bottom = 258.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e o numero tirado no dado?"
align = 1
valign = 1

[node name="LineEdit3" type="LineEdit" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 262.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1
max_length = 2

[node name="CheckButton" type="CheckButton" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 304.0
margin_right = 300.0
margin_bottom = 344.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Possui bonus?"

[node name="LineEdit4" type="LineEdit" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 348.0
margin_right = 300.0
margin_bottom = 386.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1
editable = false

[node name="CheckButton2" type="CheckButton" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 390.0
margin_right = 300.0
margin_bottom = 430.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Possui onus?"

[node name="LineEdit5" type="LineEdit" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 434.0
margin_right = 300.0
margin_bottom = 472.0
rect_min_size = Vector2( 300, 25 )
text = "0"
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 476.0
margin_right = 300.0
margin_bottom = 506.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "O dano e:"
align = 1
valign = 1

[node name="Label5" type="Label" parent="TabContainer/Damage/TabContainer/Distancia/VBoxContainer"]
margin_top = 510.0
margin_right = 300.0
margin_bottom = 540.0
rect_min_size = Vector2( 300, 30 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1
valign = 1

[node name="Especial" type="Tabs" parent="TabContainer/Damage/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 41.0
margin_right = -10.0
margin_bottom = -10.0
drag_to_rearrange_enabled = true
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Damage/TabContainer/Especial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -232.0
margin_right = 162.0
margin_bottom = 232.0
rect_min_size = Vector2( 314, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_right = 324.0
margin_bottom = 30.0
rect_min_size = Vector2( 314, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e o dano especial?"
align = 1

[node name="LineEdit" type="LineEdit" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 34.0
margin_right = 324.0
margin_bottom = 72.0
rect_min_size = Vector2( 314, 25 )
text = "0"
align = 1

[node name="Label2" type="Label" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 76.0
margin_right = 324.0
margin_bottom = 106.0
rect_min_size = Vector2( 314, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e a sabedoria de quem esta atacando?"
align = 1

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 110.0
margin_right = 324.0
margin_bottom = 148.0
rect_min_size = Vector2( 314, 25 )
text = "0"
align = 1

[node name="Label3" type="Label" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 152.0
margin_right = 324.0
margin_bottom = 182.0
rect_min_size = Vector2( 314, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Qual e o numero tirado no dado?"
align = 1

[node name="LineEdit3" type="LineEdit" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 186.0
margin_right = 324.0
margin_bottom = 224.0
rect_min_size = Vector2( 314, 25 )
text = "0"
align = 1
max_length = 2

[node name="CheckButton" type="CheckButton" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 228.0
margin_right = 324.0
margin_bottom = 268.0
rect_min_size = Vector2( 314, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Possui bonus?"

[node name="LineEdit4" type="LineEdit" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 272.0
margin_right = 324.0
margin_bottom = 310.0
rect_min_size = Vector2( 314, 25 )
text = "0"
align = 1
editable = false

[node name="CheckButton2" type="CheckButton" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 314.0
margin_right = 324.0
margin_bottom = 354.0
rect_min_size = Vector2( 314, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Possui onus?"

[node name="LineEdit5" type="LineEdit" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 358.0
margin_right = 324.0
margin_bottom = 396.0
rect_min_size = Vector2( 314, 25 )
text = "0"
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 400.0
margin_right = 324.0
margin_bottom = 430.0
rect_min_size = Vector2( 30, 30 )
custom_fonts/font = ExtResource( 1 )
text = "O dano e:"
align = 1

[node name="Label5" type="Label" parent="TabContainer/Damage/TabContainer/Especial/VBoxContainer"]
margin_top = 434.0
margin_right = 324.0
margin_bottom = 464.0
rect_min_size = Vector2( 30, 30 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1

[node name="Status" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 41.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Status"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -173.5
margin_right = 400.0
margin_bottom = 174.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Status/VBoxContainer"]
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Vitalidade"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="TabContainer/Status/VBoxContainer"]
margin_top = 44.0
margin_right = 300.0
margin_bottom = 84.0
rect_min_size = Vector2( 300, 40 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/Status/VBoxContainer"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 128.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Força"
align = 1
valign = 1

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Status/VBoxContainer"]
margin_top = 132.0
margin_right = 300.0
margin_bottom = 172.0
rect_min_size = Vector2( 300, 40 )
text = "0"
align = 1

[node name="Label3" type="Label" parent="TabContainer/Status/VBoxContainer"]
margin_top = 176.0
margin_right = 300.0
margin_bottom = 216.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Velocidade/Agilidade"
align = 1
valign = 1

[node name="LineEdit3" type="LineEdit" parent="TabContainer/Status/VBoxContainer"]
margin_top = 220.0
margin_right = 300.0
margin_bottom = 260.0
rect_min_size = Vector2( 300, 40 )
text = "0"
align = 1

[node name="Label4" type="Label" parent="TabContainer/Status/VBoxContainer"]
margin_top = 264.0
margin_right = 300.0
margin_bottom = 304.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Sabedoria"
align = 1
valign = 1

[node name="LineEdit4" type="LineEdit" parent="TabContainer/Status/VBoxContainer"]
margin_top = 308.0
margin_right = 300.0
margin_bottom = 348.0
rect_min_size = Vector2( 300, 40 )
text = "0"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Status"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -401.0
margin_top = -130.0
margin_right = -101.0
margin_bottom = 130.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/Status/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Vida:"
align = 1
valign = 1

[node name="Label3" type="Label" parent="TabContainer/Status/VBoxContainer2"]
margin_top = 44.0
margin_right = 300.0
margin_bottom = 84.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1
valign = 1

[node name="Label4" type="Label" parent="TabContainer/Status/VBoxContainer2"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 128.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Stamina:"
align = 1
valign = 1

[node name="Label5" type="Label" parent="TabContainer/Status/VBoxContainer2"]
margin_top = 132.0
margin_right = 300.0
margin_bottom = 172.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1
valign = 1

[node name="Label6" type="Label" parent="TabContainer/Status/VBoxContainer2"]
margin_top = 176.0
margin_right = 300.0
margin_bottom = 216.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Mana/Energia Vital:"
align = 1
valign = 1

[node name="Label7" type="Label" parent="TabContainer/Status/VBoxContainer2"]
margin_top = 220.0
margin_right = 300.0
margin_bottom = 260.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1
valign = 1

[node name="Hurt" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 41.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Hurt"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -86.0
margin_right = 400.0
margin_bottom = 86.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Hurt/VBoxContainer"]
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Vitalidade"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="TabContainer/Hurt/VBoxContainer"]
margin_top = 44.0
margin_right = 300.0
margin_bottom = 84.0
rect_min_size = Vector2( 300, 40 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/Hurt/VBoxContainer"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 128.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Força"
align = 1
valign = 1

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Hurt/VBoxContainer"]
margin_top = 132.0
margin_right = 300.0
margin_bottom = 172.0
rect_min_size = Vector2( 300, 40 )
text = "0"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Hurt"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -401.0
margin_top = -174.0
margin_right = -101.0
margin_bottom = 174.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/Hurt/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Cabeçã:"
align = 1
valign = 1

[node name="Label3" type="Label" parent="TabContainer/Hurt/VBoxContainer2"]
margin_top = 44.0
margin_right = 300.0
margin_bottom = 84.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1
valign = 1

[node name="Label4" type="Label" parent="TabContainer/Hurt/VBoxContainer2"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 128.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Tronco:"
align = 1
valign = 1

[node name="Label5" type="Label" parent="TabContainer/Hurt/VBoxContainer2"]
margin_top = 132.0
margin_right = 300.0
margin_bottom = 172.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1
valign = 1

[node name="Label6" type="Label" parent="TabContainer/Hurt/VBoxContainer2"]
margin_top = 176.0
margin_right = 300.0
margin_bottom = 216.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Braços:"
align = 1
valign = 1

[node name="Label7" type="Label" parent="TabContainer/Hurt/VBoxContainer2"]
margin_top = 220.0
margin_right = 300.0
margin_bottom = 260.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1
valign = 1

[node name="Label8" type="Label" parent="TabContainer/Hurt/VBoxContainer2"]
margin_top = 264.0
margin_right = 300.0
margin_bottom = 304.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "Pernas:"
align = 1
valign = 1

[node name="Label9" type="Label" parent="TabContainer/Hurt/VBoxContainer2"]
margin_top = 308.0
margin_right = 300.0
margin_bottom = 348.0
rect_min_size = Vector2( 300, 40 )
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.942
anchor_right = 1.0
anchor_bottom = 0.098
margin_left = 0.391968
margin_bottom = 0.199997
hint_tooltip = "Voltar para o menu

Atalho: Esc"
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
visible = false
anchor_left = 0.008
anchor_right = 0.081
anchor_bottom = 0.048
margin_left = -0.192
margin_right = 0.0559998
margin_bottom = 0.199999
hint_tooltip = "Repositorio de Calculadoras de dano

Atalho: Shift + D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
visible = false
anchor_left = 0.082
anchor_right = 0.146
anchor_bottom = 0.048
margin_left = 0.0319977
margin_right = 0.495987
margin_bottom = 0.199999
hint_tooltip = "Repositorio de calculadoras de status

Atalho: Shift + S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="."]
visible = false
anchor_left = 0.146
anchor_right = 0.192
anchor_bottom = 0.048
margin_left = -0.504013
margin_right = 0.391998
margin_bottom = 0.199999
hint_tooltip = "Repositorio de Calculadoras de limites de ferimentos

Atalho: Shift + H"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="TabContainer/Damage/TabContainer/Fisico/VBoxContainer/CheckButton" to="TabContainer/Damage/TabContainer/Fisico" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="TabContainer/Damage/TabContainer/Fisico/VBoxContainer/CheckButton2" to="TabContainer/Damage/TabContainer/Fisico" method="_on_CheckButton2_toggled"]
[connection signal="toggled" from="TabContainer/Damage/TabContainer/Distancia/VBoxContainer/CheckButton" to="TabContainer/Damage/TabContainer/Distancia" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="TabContainer/Damage/TabContainer/Distancia/VBoxContainer/CheckButton2" to="TabContainer/Damage/TabContainer/Distancia" method="_on_CheckButton2_toggled"]
[connection signal="toggled" from="TabContainer/Damage/TabContainer/Especial/VBoxContainer/CheckButton" to="TabContainer/Damage/TabContainer/Especial" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="TabContainer/Damage/TabContainer/Especial/VBoxContainer/CheckButton2" to="TabContainer/Damage/TabContainer/Especial" method="_on_CheckButton2_toggled"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
